--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Embedded HTML and CSS Project</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" type="text/css" href="styles.css">
         <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.9/css/all.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
     <body>
         <nav class="navigation-icon">
-            <div class="options-icon">
-                <img src="options-icon.png">
-            </div>
             <div>
-                <img src="logo_youtube.jpg" class="yt-logo">
+                <img class="img-logo" src="images/options-icon.png">
+            </div>
+            <div class="img-youtube-logo">
+                <img src="images/logo_youtube.jpg">
             </div>
             <div class="searchbox-size">
                 <form class="example" action="action_page.php">
@@ -22,31 +23,40 @@
                     <button type="submit"><i class="fa fa-search"></i></button>
                 </form>
             </div>
-            <!--<div class="video-icon">
-                <i class="fa fa-video fa-2x"></i>
-            </div>
-            <div class="apps-icon">
-                <i class="fab fa-elementor fa-3x"></i>
-            </div>
-            <div class="bell-icon">
-                <i class="fas fa-bell fa-3x"></i>
-            </div>
-            <div class="user-icon">
-                <i class="far fa-user-circle fa-3x"></i>
-            </div>-->
+            
             <div class="video-icon">
-                <img src="video-icon.png">
+                <img src="images/video-icon.png">
             </div>
-            <div class="apps-icon">
-                <img src="apps-icon.png">
+            <div class="apps-icom">
+                <img src="images/apps-icon.png">
             </div>
-            <div class="bell-icon">
-                <img src="bell-icon.png">
+            <div class= "bell-icon">
+                <img src="images/bell-icon.png">
             </div>
             <div class="user-icon">
-                <img src="user-icon.png">
+                <img src="images/user-icon.png">
             </div>
         </nav>
+        <div class = "container">
+<div class = "yt-video-left">
+    <iframe width="900" height="400" src="https://www.youtube.com/embed/tHAwCpQWofc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h3 class= "video-font">The Weeknd - Call Out My Name // Fingerstyle Guitar Cover - Dax Andreas</h3>
+<div class= "container-1">
+    <p>366,106 views•Apr 1, 2018 </p>
+        <i class="material-icons thumb-up">thumb_up</i>
+        <i class="material-icons thumb-down">thumb_down</i>
+        <i class="material-icons share">share</i>
+</div>
+</div>
 
+<div class = "yt-videos-picture">
+    <img src= "https://wallpaper-house.com/data/out/12/wallpaper2you_510460.jpg" alt= "youtube-pic">
+    <img src= "https://wallpaper-house.com/data/out/12/wallpaper2you_510460.jpg" alt= "youtube-pic">
+    <img src= "https://wallpaper-house.com/data/out/12/wallpaper2you_510460.jpg" alt= "youtube-pic">
+    <img src= "https://wallpaper-house.com/data/out/12/wallpaper2you_510460.jpg" alt= "youtube-pic">
+    <img src= "https://wallpaper-house.com/data/out/12/wallpaper2you_510460.jpg" alt= "youtube-pic">
+</div>
+</div>
+        
     </body>
 </html>
