Navbar first icon, youtube logo and searchbar

--- a/index.html
+++ b/index.html
@@ -9,20 +9,21 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto:wght@300;400&display=swap" rel="stylesheet">   
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
+
     <body>
         <div class="main-cont">
 
-            <nav class="navigation-cont">
-                <div class="logo-cont">
-                    <div>
-                        <img class="options-icon" src="images/options-icon.png">
+            <nav class="nav-container">
+
+                <div class="nav-cont-1">
+                    <div class="options-icon">
+                        <img src="images/options-icon.png">
                     </div>
-                    <div class="img-youtube-logo">
-                        <img src="images/logo-youtube.jpg">
+                    <div>
+                        <img src="images/yt-logo.jpg" class="yt-logo">
                     </div>
                 </div>
-                
-                <div class="searchbox-size search-cont">
+                <div class="nav-cont-2">
                     <form class="example" action="action_page.php">
                         <input type="text" placeholder="Search.." name="search" class="searchbox-pad">
                         <button type="submit"><i class="fa fa-search"></i></button>
