--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Embedded HTML and CSS Project</title>
-        <link rel="stylesheet" href="stylesMILY.css">
+        <link rel="stylesheet" href="styles.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto:wght@300;400&display=swap" rel="stylesheet">   
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -15,16 +15,16 @@
 
             <nav class="nav-container">
 
-                <div class="nav-cont-1">
+                <div class="logo-cont">
                     <div class="options-icon">
                         <img src="images/options-icon.png">
                     </div>
-                    <div>
+                    <!--<div>
                         <img src="images/new-logo.jpg" class="yt-logo">
                     </div>
-                </div>
+                </div>-->
 
-                <div class="nav-cont-2">
+                <div class="search-cont">
                     <form class="example" action="action_page.php">
                         <input type="text" placeholder="Search.." name="search" class="searchbox-pad">
                         <button type="submit"><i class="fa fa-search"></i></button>
@@ -53,7 +53,6 @@
 
                 <section class = "left-section">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/tHAwCpQWofc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <h3 class= "video-font">Contributing to Open Source Part I: The Easy Way</h3>
                 
                     <section class="videoDescrip-section">
                         <h3 class= "video-font">Contributing to Open Source Part I: The Easy Way</h3>
@@ -182,5 +181,5 @@
         </div>
 
     </body>
-    
+
 </html>
