CSS Navbar commit-2

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <title>Embedded HTML and CSS Project</title>
         <link rel="stylesheet" href="styles.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto:wght@300;400&display=swap" rel="stylesheet">   
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
 
     <body>
@@ -19,10 +19,10 @@
                     <div class="options-icon">
                         <img src="images/options-icon.png">
                     </div>
-                    <!--<div>
+                    <div>
                         <img src="images/new-logo.jpg" class="yt-logo">
                     </div>
-                </div>-->
+                </div>
 
                 <div class="search-cont">
                     <form class="example" action="action_page.php">
@@ -35,7 +35,7 @@
                     <div class="video-icon">
                         <img src="images/video-icon.png">
                     </div>
-                    <div class="apps-icom">
+                    <div class="apps-icon">
                         <img src="images/apps-icon.png">
                     </div>
                     <div class= "bell-icon">
